kube/deploy/apps/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik
  namespace: authentik
spec:
  from:
    - &sp
      group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: radicale
    - <<: *sp
      namespace: firefly
    - <<: *sp
      namespace: media
    - <<: *sp
      namespace: silverbullet
    - <<: *sp
      namespace: flatnotes
    - <<: *sp
      namespace: openclaw
  to:
    - group: ""
      kind: Service
