kube/deploy/apps/authentik/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app authentik
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # allow HTTP traffic in-cluster
    - fromEndpoints:
        - matchLabels:
            authentik.home.arpa/http: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9000"
    # allow HTTPS traffic in-cluster
    - fromEndpoints:
        - matchLabels:
            authentik.home.arpa/https: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9443"
    - fromEndpoints:
        - matchLabels:
            authentik.home.arpa/oidc: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
          rules:
            http:
              - path: "/application/o/.*"
          terminatingTLS:
            secret:
              name: authentik-tls
          originatingTLS:
            secret:
              name: authentik-tls
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow external auth services (Duo & Plex)
    - toFQDNs:
        - &duo { matchPattern: "api-*.duosecurity.com" }
        - &plex { matchName: "plex.tv" }
        - &hibp { matchPattern: "*.pwnedpasswords.com" }
        - &s3 { matchPattern: "*.${APP_DNS_AUTHENTIK}" }
      toPorts:
        - ports:
            - port: "443"
    # allow AWS SES
    - toFQDNs:
        - &smtp { matchPattern: "email-smtp.*.amazonaws.com" }
      toPorts:
        - ports:
            - port: "587"
    # toFQDNs
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns:
              - *duo
              - *smtp
              - *plex
              - *hibp
              - *s3
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: &app authentik-http-in-cluster
spec:
  endpointSelector:
    matchLabels:
      authentik.home.arpa/http: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/controller: authentik
      toPorts:
        - ports:
            - port: "9000"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: &app authentik-https-in-cluster
spec:
  endpointSelector:
    matchLabels:
      authentik.home.arpa/https: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/controller: app
      toPorts:
        - ports:
            - port: "9443"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-ldap
  namespace: &app authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/controller: ldap
  ingress:
    # allow LDAP traffic
    - fromEndpoints:
        - matchLabels:
            authentik.home.arpa/ldap: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts: &port
        - ports:
            - port: "6636"
    - fromCIDRSet:
        - cidr: "${IP_ROUTER_VLAN_K8S}/32"
      toPorts: *port
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: &app authentik-ldap
spec:
  endpointSelector:
    matchLabels:
      authentik.home.arpa/ldap: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/controller: ldap
      toPorts:
        - ports:
            - port: "6636"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-radius
  namespace: &app authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/controller: radius
  ingress:
    # allow radius traffic
    - fromCIDRSet:
        - cidr: "${IP_ROUTER_VLAN_K8S}/32"
      toPorts:
        - ports:
            - port: "1812"
